[project]
name = "isochrones"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=1.1.1",
    "requests>=2.32.4",
]

[project.optional-dependencies]
example = ["matplotlib>=3.10.5"]

dev = [
  "pre-commit>=4.3.0",
]

[tool.setuptools]
packages = ["isochrones"]
