[project]
name = "isochrones"
version = "0.3.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [

    "geopandas>=1.1.1",
    "osmnx>=2.0.6",
    "requests>=2.32.4",
]

[project.optional-dependencies]
example = [
  "matplotlib>=3.10.5",
  "numpy>=2.3.2",
  "contextily>=1.6.2",
  "python-dotenv>=1.1.1",
]

dev = [
  "pre-commit>=4.3.0",
]

[tool.setuptools]
packages = ["isochrones"]
